# rinha-backend-2023-q3

./: .gitignore  Cargo.toml  configuration.yaml  docker-compose.yml
configuration/: base.yaml  local.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/structs/: api.rs  person.rs
tests/: api.rs
tests/api/: count_devs.rs  get_dev_by_id.rs  get_devs_by_search_term.rs  health_check.rs  helpers.rs  main.rs  post_devs.rs
