[package]
name = "rinha-backend-2023-q3"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rest-api-server"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.8", features = ["bson-uuid-1"] }
uuid = { version = "1.9", features = ["serde", "v4"] }
futures = "0.3.29"
hyper = "1.3.1"
config = { version = "0.14.0", features = [] }
tower-http = { version = "0.5.2", features = ["sensitive-headers", "trace", "util", "request-id"] }
tower = "0.4.13"

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
ulid = "1.1.2"
